# mixing_py2_py3_ros

./: CMakeLists.txt  package.xml  setup.py
launch/: both.launch
scripts/: py2.py  py3.py
